--- a/public/locales/fr/about.json
+++ b/public/locales/fr/about.json
@@ -23,10 +23,12 @@
     ],
     "aside": [
       {
+        "key": "project",
         "title": "Projets Terminés",
         "value": 10
       },
       {
+        "key": "experience",
         "title": "Années d'Expérience",
         "value": 3
       }
